--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "django>=5.1.2",
     "gunicorn>=23.0.0",
+    "whitenoise>=6.8.2",
 ]
 
 [dependency-groups]
